feat: update my daily solves response
